# Human-Joint-Angles-Computation-Qualysis-data-

./: Operator_qualisys.ttt  README.md
src/qualysis_data/: CMakeLists.txt  Operator_qualisys.ttt  package.xml
src/qualysis_data/files/reports/: flexao_upper_arm.txt  global_test.txt  pronacao_pulso.txt  reflexao_cotovelo.txt
src/qualysis_data/files/rula_reports/: pronacao_pulso.txt  reflexao_cotovelo.txt
src/qualysis_data/include/qualysis_data/: config.hpp  config.hpp.in  joint.h  mainwindow.h  qualysis_move_data.h  ros_communication.h  rula.h  rulainterface.h
src/qualysis_data/src/: joint.cpp  main.cpp  mainwindow.cpp  plots_interface.cpp  qualysis_move_data.cpp  ros_communication.cpp  rula.cpp  segment.cpp
src/qualysis_data/ui/: mainwindow.ui  plots_interface.ui
